--- a/Ansible/Sonar/sonarqube/templates/sonar.properties.j2
+++ b/Ansible/Sonar/sonarqube/templates/sonar.properties.j2
@@ -1,5 +1,6 @@
-# templates/sonar.properties.j2
-sonar.jdbc.username={{ sonarqube_db_user }}
-sonar.jdbc.password={{ sonarqube_db_password }}
-sonar.jdbc.url=jdbc:postgresql://{{ sonarqube_db_host }}:{{ sonarqube_db_port }}/{{ sonarqube_db_name }}
-
+sonar.jdbc.username=your_database_username
+sonar.jdbc.password=your_database_password
+sonar.jdbc.url=jdbc:postgresql://localhost:5432/sonarqube
+sonar.web.host=0.0.0.0
+sonar.web.port=9000
+sonar.path.data=/var/sonarqube/data
