--- a/Ansible/Sonar/sonarqube/templates/sonar.properties.j2
+++ b/Ansible/Sonar/sonarqube/templates/sonar.properties.j2
@@ -1,6 +1,6 @@
-sonar.jdbc.username=your_database_username
-sonar.jdbc.password=your_database_password
-sonar.jdbc.url=jdbc:postgresql://localhost:5432/sonarqube
+sonar.jdbc.username=sonarqube_user
+sonar.jdbc.password=sonarqube_bd_pwd
+sonar.jdbc.url=jdbc:mariadb://localhost:3306/sonarqube
 sonar.web.host=0.0.0.0
 sonar.web.port=9000
 sonar.path.data=/var/sonarqube/data
