--- a/Ansible/Jenkins/jenkins/templates/basic-security.groovy.j2
+++ b/Ansible/Jenkins/jenkins/templates/basic-security.groovy.j2
@@ -1,3 +1,4 @@
+#!groovy
 import hudson.security.*
 import jenkins.model.*
 
@@ -6,26 +7,23 @@ def hudsonRealm = new HudsonPrivateSecurityRealm(false)
 def users = hudsonRealm.getAllUsers()
 users_s = users.collect { it.toString() }
 
-// Get the admin username and password from environment variables
-def adminUsername = System.getenv('JENKINS_ADMIN_USERNAME')
-def adminPassword = System.getenv('JENKINS_ADMIN_PASSWORD')
-
 // Create the admin user account if it doesn't already exist.
-if (adminUsername in users_s) {
+if ("{{ jenkins_admin_username }}" in users_s) {
     println "Admin user already exists - updating password"
 
-    def user = hudson.model.User.get(adminUsername);
-    def password = hudson.security.HudsonPrivateSecurityRealm.Details.fromPlainPassword(adminPassword)
+    def user = hudson.model.User.get('{{ jenkins_admin_username }}');
+    def password = hudson.security.HudsonPrivateSecurityRealm.Details.fromPlainPassword('{{ jenkins_admin_password }}')
     user.addProperty(password)
     user.save()
 }
 else {
     println "--> creating local admin user"
 
-    hudsonRealm.createAccount(adminUsername, adminPassword)
+    hudsonRealm.createAccount('{{ jenkins_admin_username }}', '{{ jenkins_admin_password }}')
     instance.setSecurityRealm(hudsonRealm)
 
     def strategy = new FullControlOnceLoggedInAuthorizationStrategy()
     instance.setAuthorizationStrategy(strategy)
     instance.save()
 }
+
