--- a/Ansible/Jenkins/jenkins/templates/add_credentials.groovy.j2
+++ b/Ansible/Jenkins/jenkins/templates/add_credentials.groovy.j2
@@ -1,3 +1,4 @@
+// add_credentials.groovy.j2
 import com.cloudbees.plugins.credentials.impl.UsernamePasswordCredentialsImpl
 import com.cloudbees.plugins.credentials.CredentialsScope
 import hudson.util.Secret
@@ -6,8 +7,9 @@ def domain = com.cloudbees.plugins.credentials.domains.Domain.global()
 def credsStore = Jenkins.instance.getExtensionList('com.cloudbees.plugins.credentials.SystemCredentialsProvider')[0].getStore()
 
 def credentials = [
-    [id: "sonar-user-credentials-idn", username: "admin", password: "sonar"],
-    [id: "nexus-user-credentials-id", username: "admin", password: "nexus"]
+{% for userpass in usernamePassword %}
+    [id: "{{ userpass.id }}", username: "{{ userpass.username }}", password: "{{ userpass.password }}"],
+{% endfor %}
 ]
 
 for (cred in credentials) {
