--- a/Ansible/Jenkins/jenkins/configuration_as_code/credentials.yml.j2
+++ b/Ansible/Jenkins/jenkins/configuration_as_code/credentials.yml.j2
@@ -3,6 +3,16 @@ credentials:
   system:
     domainCredentials:
       - credentials:
+{% for sshkey in basicSSHUserPrivateKey %}
+        - basicSSHUserPrivateKey:
+            id: "{{ sshkey.id }}"
+            privateKeySource:
+              directEntry:
+                privateKey: |
+                  {{ lookup('file', sshkey.rsa_key ) | indent(18) }}
+            scope: GLOBAL
+            username: "{{ sshkey.username }}"
+{% endfor %}
 {% for userpass in usernamePassword %}
         - usernamePassword:
             id: "{{ userpass.id }}"
