--- a/Ansible/Jenkins/jenkins/templates/variables.groovy.j2
+++ b/Ansible/Jenkins/jenkins/templates/variables.groovy.j2
@@ -4,7 +4,9 @@ import hudson.slaves.EnvironmentVariablesNodeProperty
 
 def envVars = [
   {% for variable in envVariables %}
-    "{{ variable.key }}": "{{ variable.value }}"{% if not loop.last %},{% endif %}
+    "{{ variable.key }}": "{{ variable.value }}"{% if not loop.last %},
+    {% endif %}
+
   {% endfor %}
 ]
 
